--- a/index.html
+++ b/index.html
@@ -127,6 +127,7 @@
         <div style="background: #1e293b; padding: 20px; border-radius: 15px; text-align: center;">
             <h2 id="p-balance">0.00 TON</h2>
             <p style="color: #94a3b8; font-size: 12px;">Ваш баланс</p>
+            <button class="btn btn-success" onclick="depositFunds()">➕ Пополнить баланс (TON)</button>
             <input type="text" id="steamIdInput" placeholder="SteamID64" style="width:100%; margin-top:15px; padding:10px; border-radius:8px; background:#0f172a; border:1px solid #334155; color:white;">
             <button class="btn btn-primary" onclick="saveData()">💾 Сохранить ID</button>
         </div>
@@ -295,5 +296,6 @@
     </script>
 </body>
 </html>
+
 
 
