--- a/index.html
+++ b/index.html
@@ -6,28 +6,50 @@
     <title>StatTrak Market</title>
     <script src="https://telegram.org/js/telegram-web-app.js"></script>
     <style>
-        /* Базовые стили из твоего файла */
         * { margin: 0; padding: 0; box-sizing: border-box; }
-        body { font-family: sans-serif; background: #0f172a; color: white; padding-bottom: 80px; }
+        body { font-family: -apple-system, sans-serif; background: #0f172a; color: white; padding-bottom: 80px; overflow-x: hidden; }
+        
+        /* ШАПКА И ПОИСК */
         .header { background: #1e293b; padding: 15px 20px; position: sticky; top: 0; z-index: 100; box-shadow: 0 4px 20px rgba(0,0,0,0.3); }
         .header h1 { font-size: 24px; background: linear-gradient(135deg, #667eea 0%, #764ba2 100%); -webkit-background-clip: text; -webkit-text-fill-color: transparent; }
         .search-box { width: 100%; padding: 12px; background: #0f172a; border: 2px solid #334155; border-radius: 12px; color: white; margin-top: 10px; }
-        .section { display: none; padding: 20px; }
+
+        /* СЕКЦИИ */
+        .section { display: none; padding: 20px; animation: fadeIn 0.3s; }
         .section.active { display: block; }
+        @keyframes fadeIn { from { opacity: 0; transform: translateY(10px); } to { opacity: 1; transform: translateY(0); } }
+
+        /* СЕТКА ТОВАРОВ */
         .items-grid { display: grid; grid-template-columns: repeat(auto-fill, minmax(140px, 1fr)); gap: 15px; }
-        .item-card { background: #1e293b; border-radius: 12px; padding: 15px; text-align: center; border-bottom: 4px solid #475569; }
+        .item-card { background: #1e293b; border-radius: 12px; padding: 15px; text-align: center; border-bottom: 4px solid #475569; transition: transform 0.2s; }
+        .item-card:active { transform: scale(0.95); }
         .item-card img { width: 100%; max-width: 100px; height: auto; filter: drop-shadow(0 4px 8px rgba(0,0,0,0.3)); }
-        .item-price { color: #10b981; font-weight: bold; margin: 5px 0; }
-        .btn { padding: 10px; border: none; border-radius: 8px; font-weight: 600; cursor: pointer; width: 100%; }
-        .btn-success { background: #10b981; color: white; }
-        .btn-primary { background: #667eea; color: white; }
-        .bottom-nav { position: fixed; bottom: 0; left: 0; right: 0; background: #1e293b; display: flex; justify-content: space-around; padding: 10px 0 25px 0; }
-        .nav-btn { background: none; border: none; color: #94a3b8; font-size: 12px; display: flex; flex-direction: column; align-items: center; }
-        .nav-btn.active { color: #667eea; }
-        .toast-container { position: fixed; bottom: 90px; left: 20px; right: 20px; z-index: 10000; }
-        .toast { background: #1e293b; color: white; padding: 12px; border-radius: 8px; border-left: 4px solid #667eea; margin-top: 5px; }
-        /* Цвета редкостей */
+        .item-name { font-size: 12px; margin: 8px 0; min-height: 32px; font-weight: 500; }
+        .item-price { font-size: 18px; font-weight: bold; color: #10b981; }
+
+        /* РЕДКОСТИ */
         .rarity-ancient { border-bottom-color: #eb4b4b; box-shadow: 0 4px 15px rgba(235, 75, 75, 0.3); }
+        .rarity-legendary { border-bottom-color: #d32ce6; box-shadow: 0 4px 15px rgba(211, 44, 230, 0.3); }
+        .rarity-mythical { border-bottom-color: #8847ff; box-shadow: 0 4px 15px rgba(136, 71, 255, 0.3); }
+
+        /* КНОПКИ */
+        .btn { padding: 12px; border: none; border-radius: 10px; font-weight: 600; cursor: pointer; width: 100%; margin-top: 10px; transition: 0.3s; }
+        .btn-success { background: #10b981; color: white; }
+        .btn-primary { background: linear-gradient(135deg, #667eea 0%, #764ba2 100%); color: white; }
+
+        /* НАВИГАЦИЯ */
+        .bottom-nav { position: fixed; bottom: 0; left: 0; right: 0; background: #1e293b; display: flex; justify-content: space-around; padding: 10px 0 25px 0; z-index: 1000; }
+        .nav-btn { background: none; border: none; color: #94a3b8; font-size: 12px; display: flex; flex-direction: column; align-items: center; gap: 5px; }
+        .nav-btn.active { color: #667eea; }
+        .nav-icon { font-size: 20px; }
+
+        /* TOAST */
+        .toast-container { position: fixed; bottom: 100px; left: 20px; right: 20px; z-index: 10000; }
+        .toast { background: #1e293b; color: white; padding: 15px; border-radius: 10px; border-left: 4px solid #667eea; margin-top: 10px; box-shadow: 0 5px 15px rgba(0,0,0,0.3); }
+
+        .loader { text-align: center; padding: 40px; color: #667eea; }
+        .spinner { border: 4px solid #334155; border-top: 4px solid #667eea; border-radius: 50%; width: 40px; height: 40px; animation: spin 1s linear infinite; margin: 0 auto 10px; }
+        @keyframes spin { to { transform: rotate(360deg); } }
     </style>
 </head>
 <body>
@@ -39,7 +61,10 @@
     </div>
 
     <div class="section active" id="marketSection">
-        <div style="color: #10b981; font-weight: bold; margin-bottom: 10px;">Баланс: <span id="m-balance">0.00</span> TON</div>
+        <div style="background: rgba(16, 185, 129, 0.1); padding: 10px; border-radius: 10px; margin-bottom: 15px; border: 1px solid #10b981;">
+            <span style="color: #94a3b8; font-size: 12px;">Ваш баланс:</span>
+            <span id="m-balance" style="color: #10b981; font-weight: bold; font-size: 18px; margin-left: 5px;">0.00</span> TON
+        </div>
         <div class="items-grid" id="marketGrid"></div>
     </div>
 
@@ -48,19 +73,23 @@
     </div>
 
     <div class="section" id="profileSection">
-        <div style="background: #1e293b; padding: 20px; border-radius: 15px; text-align: center;">
-            <h2 id="p-balance">0.00 TON</h2>
-            <p style="color: #94a3b8; font-size: 12px;">Ваш баланс</p>
-            <button class="btn btn-success" onclick="depositFunds()" style="margin: 15px 0;">➕ Пополнить баланс</button>
-            <input type="text" id="steamIdInput" placeholder="SteamID64" style="width:100%; padding:10px; border-radius:8px; background:#0f172a; border:1px solid #334155; color:white; margin-top:10px;">
-            <button class="btn btn-primary" onclick="saveData()" style="margin-top:10px;">💾 Сохранить ID</button>
+        <div style="background: #1e293b; padding: 25px; border-radius: 20px; text-align: center; border: 1px solid #334155;">
+            <h2 id="p-balance" style="font-size: 32px; color: #10b981;">0.00 TON</h2>
+            <p style="color: #94a3b8; font-size: 13px; margin-bottom: 20px;">Внутренний баланс</p>
+            <button class="btn btn-success" onclick="depositFunds()">➕ Пополнить баланс</button>
+            <div style="margin-top: 25px; border-top: 1px solid #334155; padding-top: 20px;">
+                <input type="text" id="steamIdInput" placeholder="Введите SteamID64" style="width:100%; padding:12px; border-radius:10px; background:#0f172a; border:1px solid #334155; color:white;">
+                <button class="btn btn-primary" onclick="saveData()">💾 Сохранить SteamID</button>
+            </div>
         </div>
+        <h3 style="margin: 25px 0 15px;">📋 Мои активные лоты</h3>
+        <div id="myListings"></div>
     </div>
 
     <nav class="bottom-nav">
-        <button class="nav-btn active" onclick="switchSection('market')">🛒<span>Маркет</span></button>
-        <button class="nav-btn" onclick="switchSection('inventory')">🎒<span>Инвентарь</span></button>
-        <button class="nav-btn" onclick="switchSection('profile')">👤<span>Профиль</span></button>
+        <button class="nav-btn active" onclick="switchSection('market')"><span class="nav-icon">🛒</span>Маркет</button>
+        <button class="nav-btn" onclick="switchSection('inventory')"><span class="nav-icon">🎒</span>Инвентарь</button>
+        <button class="nav-btn" onclick="switchSection('profile')"><span class="nav-icon">👤</span>Профиль</button>
     </nav>
 
     <script>
@@ -69,7 +98,8 @@
         tg.ready();
         tg.expand();
 
-        const userId = tg.initDataUnsafe?.user?.id || 12345;
+        const user = tg.initDataUnsafe?.user || { id: 12345, first_name: "Demo" };
+        const userId = user.id;
         let userBalance = 0;
 
         function showToast(text) {
@@ -88,72 +118,106 @@
                 userBalance = data.balance;
                 document.getElementById('m-balance').innerText = userBalance.toFixed(2);
                 document.getElementById('p-balance').innerText = userBalance.toFixed(2) + " TON";
-            } catch (e) { console.error(e); }
+            } catch (e) { console.error("Balance error", e); }
         }
 
         async function loadMarket() {
             const grid = document.getElementById('marketGrid');
-            grid.innerHTML = "Загрузка...";
+            grid.innerHTML = "<div class='loader'><div class='spinner'></div></div>";
             try {
                 const res = await fetch(`${API_URL}/api/market`);
                 const items = await res.json();
                 grid.innerHTML = items.map(i => `
                     <div class="item-card ${i.rarity || ''}">
                         <img src="https://community.cloudflare.steamstatic.com/economy/image/${i.hash}/200fx200f">
-                        <div class="item-name" style="font-size:12px; margin:5px 0;">${i.name}</div>
+                        <div class="item-name">${i.name}</div>
                         <div class="item-price">${i.price} TON</div>
                         <button class="btn btn-success" onclick="buyItem('${i.id}', ${i.price}, '${i.name}')">Купить</button>
                     </div>
                 `).join('');
-            } catch (e) { showToast("Ошибка загрузки"); }
+            } catch (e) { showToast("Ошибка загрузки маркета"); }
+        }
+
+        async function loadInventory() {
+            const sid = localStorage.getItem('sid');
+            const grid = document.getElementById('inventoryGrid');
+            if (!sid) { showToast("Укажите SteamID в профиле!"); switchSection('profile'); return; }
+
+            grid.innerHTML = "<div class='loader'><div class='spinner'></div></div>";
+            try {
+                const res = await fetch(`${API_URL}/api/inventory/${sid}`);
+                const data = await res.json();
+                grid.innerHTML = data.descriptions.map(item => {
+                    const rarity = getRarityClass(item);
+                    return `
+                        <div class="item-card ${rarity}">
+                            <img src="https://community.cloudflare.steamstatic.com/economy/image/${item.icon_url}/200fx200f">
+                            <div class="item-name">${item.market_name}</div>
+                            <button class="btn btn-primary" onclick="listItem('${item.market_name}', '${item.icon_url}', '${rarity}')">Продать</button>
+                        </div>
+                    `;
+                }).join('');
+            } catch (e) { grid.innerHTML = "<div class='empty-state'>Ошибка Steam или скрытый профиль</div>"; }
+        }
+
+        function getRarityClass(item) {
+            if (!item.tags) return "";
+            const tag = item.tags.find(t => t.category === "Rarity");
+            if (!tag) return "";
+            const colors = { "eb4b4b": "rarity-ancient", "d32ce6": "rarity-legendary", "8847ff": "rarity-mythical" };
+            return colors[tag.color.toLowerCase()] || "";
         }
 
         async function buyItem(itemId, price, name) {
-            if (userBalance < price) {
-                showToast("Недостаточно средств!");
-                return;
-            }
-            if (!confirm(`Купить ${name}?`)) return;
+            if (userBalance < price) { showToast("❌ Недостаточно TON!"); return; }
+            if (!confirm(`Купить ${name} за ${price} TON?`)) return;
 
             const res = await fetch(`${API_URL}/api/market/buy`, {
                 method: 'POST',
                 headers: { 'Content-Type': 'application/json' },
-                body: JSON.stringify({ userId: userId, itemId: itemId })
+                body: JSON.stringify({ userId, itemId })
             });
-            
-            if (res.ok) {
-                showToast("Куплено!");
-                syncBalance();
-                loadMarket();
-            } else {
-                const err = await res.json();
-                showToast(err.message);
-            }
+            if (res.ok) { showToast("✅ Покупка успешна!"); syncBalance(); loadMarket(); }
+        }
+
+        async function listItem(name, hash, rarity) {
+            const price = prompt(`Цена продажи ${name} (TON):`, "1.0");
+            if (!price || isNaN(price)) return;
+            await fetch(`${API_URL}/api/market/add`, {
+                method: 'POST',
+                headers: { 'Content-Type': 'application/json' },
+                body: JSON.stringify({ name, price: parseFloat(price), hash, rarity, sellerSid: userId })
+            });
+            showToast("✅ Выставлено!");
+            switchSection('market');
         }
 
         async function depositFunds() {
-            const amount = prompt("Сумма пополнения (тест):", "10");
+            const amount = prompt("Сумма пополнения (Тест):", "5");
             if (!amount) return;
             await fetch(`${API_URL}/api/user/deposit`, {
                 method: 'POST',
                 headers: { 'Content-Type': 'application/json' },
-                body: JSON.stringify({ userId: userId, amount: amount })
+                body: JSON.stringify({ userId, amount })
             });
             syncBalance();
-            showToast("Баланс пополнен!");
+            showToast("💰 Баланс пополнен!");
         }
 
-        function switchSection(section) {
+        function switchSection(sec) {
             document.querySelectorAll('.section').forEach(s => s.classList.remove('active'));
             document.querySelectorAll('.nav-btn').forEach(b => b.classList.remove('active'));
-            document.getElementById(section + 'Section').classList.add('active');
-            if (section === 'market') loadMarket();
-            if (section === 'profile') syncBalance();
+            document.getElementById(sec + 'Section').classList.add('active');
+            const idx = sec === 'market' ? 0 : sec === 'inventory' ? 1 : 2;
+            document.querySelectorAll('.nav-btn')[idx].classList.add('active');
+            if (sec === 'market') loadMarket();
+            if (sec === 'inventory') loadInventory();
+            if (sec === 'profile') syncBalance();
         }
 
         function saveData() {
             localStorage.setItem('sid', document.getElementById('steamIdInput').value);
-            showToast("ID сохранен!");
+            showToast("💾 ID сохранен");
         }
 
         window.onload = () => {
@@ -164,8 +228,6 @@
     </script>
 </body>
 </html>
-
-
 
 
 
